Add PoliCheck exclusions.

--- a/.azure-pipelines/common-templates/security-post-checks.yml
+++ b/.azure-pipelines/common-templates/security-post-checks.yml
@@ -12,3 +12,6 @@ steps:
     inputs:
       CredScan: true
       PoliCheck: true
+      GdnBreakAllTools: false
+      GdnBreakGdnToolPoliCheck: true
+      GdnBreakGdnToolPoliCheckSeverity: Error
